# Droidsmith

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETED.md  CONTRIBUTING.md  LICENSE  LICENSE-THIRD-PARTY.md  README.md  RESEARCH.md  RESEARCH_FEATURE_PLAN.md  RESEARCH_REPORT.md  ROADMAP.md  SECURITY.md  contribution-schema-policy.json  deny.toml  eslint.config.js  index.html  language-contract.json  package-lock.json  package.json  platform-tools-policy.json  release-policy.json  tailwind.config.ts  third-party-notices.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
docs/archive/research/: RESEARCH_DEEPDIVE.md  RESEARCH_FEATURE_PLAN.md
isolation/: index.html  index.js
packaging/scoop/: droidsmith.json
packaging/winget/: SysAdminDoc.Droidsmith.yaml
packs/: _example.yaml  amazon-fireos.yaml  motorola.yaml  nothing-os.yaml  oneplus-oxygenos.yaml  oppo-coloros.yaml  pixel.yaml  realme-ui.yaml  samsung-oneui.yaml  schema.json  xiaomi-hyperos.yaml
profiles/: schema.json
quirks/: hyperos.yaml  schema.json
scripts/: _tmp_i18n_add.py  audit-rust.mjs  check-bindings.mjs  check-production-bundle.mjs  check-release-policy.mjs  check-rendered-routes.mjs  check-tauri-resources.mjs  dev-mirror.ps1  dev-mirror.sh  fetch-platform-tools.ps1  fetch-platform-tools.sh  generate-packaging-manifests.mjs  isolation-policy.test.mjs  packaging-manifests.test.mjs  release-policy.test.mjs
src/: App.test.tsx  App.tsx  RendererErrorBoundary.test.ts  RendererErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/fixtures/apksigner/: verification-cases.json
src-tauri/fixtures/layout/: accessibility-audit.xml
src-tauri/fixtures/perfetto/: capture-cases.json
src-tauri/fixtures/profiles/: v1-valid.yaml  v2-valid.yaml
src-tauri/fixtures/recovery-baselines/: v1-valid.json
src-tauri/fuzz/: .gitignore  Cargo.toml
src-tauri/fuzz/corpus/adb_text/: device-and-oem-rows.txt
src-tauri/fuzz/corpus/journal_jsonl/: mixed.jsonl
src-tauri/fuzz/corpus/yaml_documents/: pack-v1.yaml
src-tauri/fuzz/fuzz_targets/: adb_text.rs  journal_jsonl.rs  scrcpy_text.rs  yaml_documents.rs
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: adb.rs  apk_analysis.rs  apk_metadata.rs  apk_signing.rs  backup.rs  bugreport.rs  captured_tail.rs  commands.rs  contribution_schema.rs  diagnostics.rs  fs_util.rs  gnirehtet.rs  host_diagnostics.rs  host_path.rs  install.rs  lib.rs  main.rs  operations.rs  perfetto.rs  process_capture.rs  process_tree.rs  profile.rs  recovery_baseline.rs  remote_files.rs  scrcpy.rs  settings.rs  support_bundle.rs  time.rs
src-tauri/src/adb/: actions.rs  device.rs  device_info.rs  device_settings.rs  health.rs  mod.rs  packages.rs  parsers.rs  resolver.rs  transport.rs  users.rs  version_policy.rs  wireless.rs
src-tauri/src/journal/: mod.rs
src-tauri/src/packs/: mod.rs
src-tauri/src/quirks/: mod.rs
src-tauri/tests/: cli_smoke.rs  fake_tool_contract.rs  property_boundaries.rs
src/lib/: bindings.ts  contrast.test.ts  deviceStore.test.ts  deviceStore.ts  format.ts  i18n.test.ts  i18n.ts  logcatQueries.test.ts  logcatQueries.ts  rendererError.ts  settings.test.ts  settings.ts  targetOperation.test.ts  targetOperation.ts  tauri.test.ts  tauri.ts  useAuthorizedDevices.test.ts  useAuthorizedDevices.ts  useFocusTrap.ts
src/locales/: de.json  en.json  es.json  ru.json  zh.json
src/routes/: ApkAnalyzer.tsx  Apps.tsx  BugreportCapture.tsx  CommandPalette.tsx  Console.tsx  Debloat.tsx  DeviceSettings.tsx  Devices.tsx  DiagnosticsCenter.tsx  Fastboot.tsx  HostDoctor.tsx  Logcat.tsx  Mirror.tsx  Onboarding.tsx  Profiles.tsx  SettingsDataControls.tsx  Wireless.tsx  adbHealth.test.ts  adbHealth.ts  apkDiff.test.ts  apkDiff.ts  appsBackup.test.ts  appsBackup.ts  appsJournal.test.ts  appsJournal.ts  common.tsx  consoleCommand.test.ts  consoleCommand.ts  debloatPack.test.ts  debloatPack.ts  debloatQueue.test.ts  debloatQueue.ts  logcatQueries.test.ts  logcatQueries.ts  mirrorPresets.test.ts  mirrorPresets.ts  placeholders.tsx  useCommandPalette.ts
src/routes/apps/: FilterControls.tsx  InstallPanels.tsx  JournalPanel.tsx  PackageTable.tsx  PermissionsPanel.tsx  RecoveryBaselinePanel.tsx  types.ts  unarchive.test.ts  unarchive.ts
src/routes/debloat/: ApplyReview.tsx  CompatibilityChecks.tsx  PackPicker.tsx  PackPreview.tsx  QueueApplyProgress.tsx  QueueApplyResult.tsx  QueueRows.tsx  QuirkHint.tsx  queue.ts  tones.ts
src/routes/devices/: AdbHealthPanel.tsx  AuthorizePrompt.tsx  DeviceControls.tsx  DeviceDetail.tsx  DeviceHeaderActions.tsx  DeviceTable.tsx  FileManager.tsx  InternetSharing.tsx  LayoutInspector.tsx  NetworkInspector.tsx  PerfettoTraceCapture.tsx  ProcessManager.test.ts  ProcessManager.tsx  RecoveryDialog.tsx  common.ts  icons.tsx
src/types/: qrcode-generator.d.ts
