[package]
name = "droidsmith"
version = "0.1.0"
description = "Cross-platform open-source GUI for managing Android devices over ADB"
authors = ["Droidsmith contributors"]
license = "MIT"
repository = "https://github.com/SysAdminDoc/Droidsmith"
edition = "2021"
rust-version = "1.81"

[lib]
name = "droidsmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
which = "8"
os_info = "3"

[[bin]]
name = "droidsmith"
path = "src/main.rs"

[[bin]]
name = "droidsmith-pack-lint"
path = "src/bin/pack_lint.rs"

[[bin]]
name = "droidsmith-cli"
path = "src/bin/droidsmith_cli.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
unsafe_code = "deny"  # `deny` (not `forbid`) so a single well-documented FFI
                       # call in diagnostics.rs can carry an #[allow] override.

[lints.clippy]
all = { level = "warn", priority = -1 }
# clippy::pedantic stays off until v0.1; re-enable selectively as the
# codebase matures.
