[package]
name = "droidsmith"
version = "0.1.0"
description = "Cross-platform open-source GUI for managing Android devices over ADB"
authors = ["Droidsmith contributors"]
license = "MIT"
repository = "https://github.com/SysAdminDoc/Droidsmith"
edition = "2021"
rust-version = "1.81"

[lib]
name = "droidsmith_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = ["isolation"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
thiserror = "2"
which = "8"
os_info = "3"
zip = { version = "=3.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[[bin]]
name = "droidsmith"
path = "src/main.rs"

[[bin]]
name = "droidsmith-pack-lint"
path = "src/bin/pack_lint.rs"

[[bin]]
name = "droidsmith-cli"
path = "src/bin/droidsmith_cli.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
unsafe_code = "deny"  # `deny` (not `forbid`) so a single well-documented FFI
                       # call in diagnostics.rs can carry an #[allow] override.

[lints.clippy]
all = { level = "warn", priority = -1 }
# clippy::pedantic stays off until v0.1; re-enable selectively as the
# codebase matures.
